--- a/Frontend/pom.xml
+++ b/Frontend/pom.xml
@@ -19,15 +19,12 @@
 
 
 		<!-- Linking backend project -->
-		<!-- Added when back and front worked and will be added again 
-		<dependency>
-			<groupId>net.radu</groupId>
-			<artifactId>Backend</artifactId>
-			<version>0.0.1-SNAPSHOT</version>			
-		</dependency>
- 		-->
+		<!-- Added when back and front worked and will be added again <dependency> 
+			<groupId>net.radu</groupId> <artifactId>Backend</artifactId> <version>0.0.1-SNAPSHOT</version> 
+			</dependency> -->
 		<!-- JAVE EE API -->
 		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
+		
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
@@ -58,6 +55,20 @@
 			<version>1.2</version>
 		</dependency>
 
+		<!-- Mail -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.activation/activation -->
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -70,7 +81,7 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
 		<finalName>Frontend</finalName>
 	</build>
