--- a/Frontend/pom.xml
+++ b/Frontend/pom.xml
@@ -19,12 +19,19 @@
 
 
 		<!-- Linking backend project -->
-		<!-- Added when back and front worked and will be added again <dependency> 
-			<groupId>net.radu</groupId> <artifactId>Backend</artifactId> <version>0.0.1-SNAPSHOT</version> 
-			</dependency> -->
+		<!-- Added when back and front worked and will be added again -->
+		 <!--
+		<dependency>
+			<groupId>net.radu</groupId>
+			<artifactId>Backend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		-->
+
+
 		<!-- JAVE EE API -->
 		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
-		
+
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
@@ -68,6 +75,20 @@
 			<version>1.1.1</version>
 		</dependency>
 
+		<!-- Json/Jackson -->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.3</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.9.3</version>
+		</dependency>
 
 	</dependencies>
 	<build>
